# environment-of-services-implementation-project

./: .gitignore  README.md  app.Dockerfile  argo-app.yml  cleanup.sh  docker-compose.yml
app/: mix.exs
app/config/: config.exs  dev.exs  runtime.exs  test.exs
app/lib/auth/: accounts.ex  application.ex  prom_ex.ex
app/lib/auth/accounts/: user.ex
app/lib/auth/user/: register.ex
app/lib/auth_web/: endpoint.ex  router.ex
app/lib/auth_web/controllers/: delete_account_controller.ex
app/priv/repo/migrations/: 20260329125220_remove_unnecessary_stuff.exs
app/test/: test_helper.exs
app/test/auth_web/controllers/: delete_account_controller_test.exs  user_registration_controller_test.exs
k8s/: app.yaml  postgres.yaml  secrets.yaml
llm/: .env.example  USAGE.md  main.py  pyproject.toml
llm/src/llm/: main.py
llm/src/llm/utils/: tools_mapper.py
