[project]
name = "llm-agent"
version = "0.1.0"
description = "LLM agent for Argo CD via MCP"
authors = [
    { name = "Your Name" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "openai>=2.30.0",
]

[project.scripts]
llm-agent = "llm.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"